--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="new.css">
+    <link rel="stylesheet" href="pandakohi.css">
     <title>PandaKohi</title>
 </head>
 
@@ -316,7 +316,7 @@
     </section>
     <!--end of footer section-->
 
-    <script src="new.js"></script>
+    <script src="pandakohi.js"></script>
 </body>
 
 
